feat: General file structure and Emmet snippets setup across all html files.

--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
                 <a href="/Rock-Paper-Scissors/rockpaperscissors.html">Rock-Paper-Scissors</a>
             </li>
             <li>
-                <a href="/">Memory Game</a>
+                <a href="/Memory-Game/memorygame.html">Memory Game</a>
             </li>
             <li>
-                <a href="#">Whack-a-Mole</a>
+                <a href="/Whack-a-mole/whackamole.html">Whack-a-Mole</a>
             </li>
             <li>
-                <a href="">Breakout</a>
+                <a href="/Breakout/breakout.html">Breakout</a>
             </li>
             <li>
-                <a href="">Frogger</a>
+                <a href="/Frogger/frogger.html">Frogger</a>
             </li>
             <li>
-                <a href="">Connect Four</a>
+                <a href="/Connect-four/connectfour.html">Connect Four</a>
             </li>
             <li>
-                <a href="">Space Invaders</a>
+                <a href="/Space-Invaders/spaceinvaders.html">Space Invaders</a>
             </li>
         </ul>
     </div>
