--- a/Breakout/breakout.html
+++ b/Breakout/breakout.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors</title>
+    <title>Breakout</title>
 </head>
 <body>
-    <script src="/Rock-Paper-Scissors/app.js" charset="utf-8"></script>
+    <script src="/Breakout/app.js" charset="utf-8"></script>
 </body>
 </html>
