--- a/Space-Invaders/spaceinvaders.html
+++ b/Space-Invaders/spaceinvaders.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors</title>
+    <title>Space Invaders</title>
 </head>
 <body>
-    <script src="/Rock-Paper-Scissors/app.js" charset="utf-8"></script>
+    <script src="/Space-Invaders/app.js" charset="utf-8"></script>
 </body>
 </html>
