--- a/Whack-a-mole/whackamole.html
+++ b/Whack-a-mole/whackamole.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors</title>
+    <title>Whack-a-Mole</title>
 </head>
 <body>
-    <script src="/Rock-Paper-Scissors/app.js" charset="utf-8"></script>
+    
+
+    <script src="/Whack-a-mole/app.js" charset="utf-8"></script>
 </body>
 </html>
